testsuite/tests/ghc-regress/parser/should_fail/read007.stderr

read007.hs:6:4: Parse error in pattern
